Added webpack-dev-server for hot reloading changes.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 	<title>Simple Javascript MVC</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
 	 crossorigin="anonymous" />
-	<link rel="stylesheet" href="./src/styles.scss" />
+	<link rel="stylesheet" href="./dist/assets/css/app.bundle.css" />
 </head>
 
 <body>
 	<!-- Bootstrap CSS -->
-
-
-
 
 	<div id="app">
 
@@ -36,7 +33,7 @@
 	</div>
 
 	<script>
-		// Import stylesheets
+		/* // Import stylesheets
 		// import './style.css';
 
 		let users;
@@ -62,11 +59,11 @@
 				userListContainer.innerHTML = user;
 			});
 
-		}
+		} */
 
 					//displayUserList();
 	</script>
-
+	<script src="./dist/app.bundle.js"></script>
 </body>
 
 </html>
