--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-<html>
+<!doctype html>
+<html lang="en-US">
 
 <head>
-	<title>Simple Javascript MVC</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-	 crossorigin="anonymous" />
-	<link rel="stylesheet" href="./dist/assets/css/app.bundle.css" />
-<link href="/dist/assets/css/app.bundle.css" rel="stylesheet"></head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>My awesome service</title>
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+<link href="/dist/assets/css/main.bundle.css" rel="stylesheet"></head>
 
 <body>
-	<!-- Bootstrap CSS -->
-
-	<div id="app">
-
-		<!-- START : Header -->
+    <!-- START : Header -->
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
     <nav class="my-2 my-md-0 mr-md-3">
@@ -24,20 +25,30 @@
 </div>
 <!-- END : Header -->
 
+  <h2>Zero to Deploy: A Practical Guide to Static Sites with Gatsby.js</h2>
 
-			<div class="container">
-				<a class="btn btn-outline-primary" onclick="displayUserList()" href="javascript:;">Display User List</a>
+  <h2>Authentication with Redirect</h2>
 
-				<ul id="userListContainer" class="list-group">
-				</ul>
-			</div>
+  <h2>Getting unique values in JavaScript arrays</h2>
 
-			<!-- all your standard template here -->
-			<p>Footer Template</p>
+  <h2>Redirecting in React</h2>
 
-	</div>
 
-	<script src="./dist/app.bundle.js"></script>
-<script type="text/javascript" src="/dist/app.bundle.js"></script></body>
+    <div class="wrapper">
+        <div class="content">
+ === 
+
+            
+
+        </div>
+        <div class="visual">
+
+            <!-- all your standard template here -->
+            <p>Footer Template Updated 77777</p>
+
+
+        </div>
+    </div>
+<script type="text/javascript" src="/dist/main.bundle.js"></script></body>
 
 </html>
