Added Header/footer templates for Handlebars, updated webconfig for dynamic templates

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- START : Header -->
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal">Handlebar Template Header</h5>
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Features</a>
         <a class="p-2 text-dark" href="#">Enterprise</a>
@@ -25,30 +25,28 @@
 </div>
 <!-- END : Header -->
 
-  <h2>Zero to Deploy: A Practical Guide to Static Sites with Gatsby.js</h2>
 
-  <h2>Authentication with Redirect</h2>
+    <!-- Example of inline partials -->
+    
+    <h1>Hello Simple Blog</h1>
 
-  <h2>Getting unique values in JavaScript arrays</h2>
-
-  <h2>Redirecting in React</h2>
-
+    <!-- START: Display list of Posts -->
+        <h2>Zero to Deploy: A Practical Guide to Static Sites with Gatsby.js</h2>
+        <h2>Authentication with Redirect</h2>
+        <h2>Getting unique values in JavaScript arrays</h2>
+        <h2>Redirecting in React</h2>
+    <!-- END: Display list of Posts -->
 
     <div class="wrapper">
         <div class="content">
- === 
-
             
-
-        </div>
-        <div class="visual">
-
-            <!-- all your standard template here -->
-            <p>Footer Template Updated 77777</p>
-
-
         </div>
     </div>
+
+    <footer class="footer">
+    <p>Handlebar Template Footer</p>
+</footer>
+
 <script type="text/javascript" src="/dist/main.bundle.js"></script></body>
 
 </html>
