Added logic for Generating pages to display post list filtered by Tags and Categories

--- a/index.html
+++ b/index.html
@@ -7,27 +7,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>My awesome service</title>
-    <link href="/dist/assets/css/app.bundle.css" rel="stylesheet">
-
-    <script type="text/javascript" src="/dist/vendor.bundle.js"></script>
-    <script type="text/javascript" src="/dist/app.bundle.js"></script>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-</head>
+<link href="/dist/assets/css/app.bundle.css" rel="stylesheet"></head>
 
 <body>
-    <!-- START : Header -->
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal"><a href="/">Handlebar Template Header</a></h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Features</a>
-        <a class="p-2 text-dark" href="#">Enterprise</a>
-        <a class="p-2 text-dark" href="#">Support</a>
-        <a class="p-2 text-dark" href="#">Pricing</a>
-    </nav>
-</div>
-<!-- END : Header -->
+    <header>
+
+    </header>
+
+    <ul class="tag-list">
+    </ul>
 
 
     <!-- Example of inline partials -->
@@ -39,11 +30,11 @@
 
             <!-- START: Display list of Posts -->
             <ul>
-            <li><a href="/dist/pages/practical-guide-to-static-sites-with-gatsby-js.html">Zero to Deploy: A Practical Guide to Static Sites with Gatsby.js</a></li>
-            <li><a href="/dist/pages/authentication-with-redirect.html">Authentication with Redirect</a></li>
-            <li><a href="/dist/pages/getting-unique-values-in-javascript-arrays.html">Getting unique values in JavaScript arrays</a></li>
-            <li><a href="/dist/pages/javascript-tutorials.html">Javascript Example</a></li>
-            <li><a href="/dist/pages/redirecting-in-react.html">Redirecting in React</a></li>
+                <li><a href="/dist/pages/a-practical-guide-to-static-sites-with-gatsby-js.md.html">Zero to Deploy: A Practical Guide to Static Sites with Gatsby.js</a></li>
+                <li><a href="/dist/pages/authentication-with-redirect.md.html">Authentication with Redirect</a></li>
+                <li><a href="/dist/pages/getting-unique-values-in-javascript-arrays.md.html">Getting unique values in JavaScript arrays</a></li>
+                <li><a href="/dist/pages/javascript-tutorials.md.html">Javascript Example</a></li>
+                <li><a href="/dist/pages/redirecting-in-react.md.html">Redirecting in React</a></li>
             </ul>
             <!-- END: Display list of Posts -->
 
@@ -56,6 +47,6 @@
 </footer>
 
 
-</body>
+<script type="text/javascript" src="/dist/vendor.bundle.js"></script><script type="text/javascript" src="/dist/vendors~app.bundle.js"></script><script type="text/javascript" src="/dist/app.bundle.js"></script></body>
 
 </html>
